Added slides about compressing images

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
       <section class="two-half column">
         <h3>Bildbehandling</h3> 
         <ul>
-          <li><a href="bildbehandling/01_intro.html">01 - Intro</a></li>    
+          <li><a href="bildbehandling/01_intro.html">01 - Intro</a></li>   
+          <li><a href="bildbehandling/02_bildhantering.html">02 - Bildhantering</a></li> 
                     
         </ul> 
       <section class="two-half column">
