Added slides about svg

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
         <ul>
           <li><a href="bildbehandling/01_intro.html">01 - Intro</a></li>   
           <li><a href="bildbehandling/02_bildhantering.html">02 - Bildhantering</a></li> 
-                    
+          <li><a href="bildbehandling/03_svg.html">03 - SVG</a></li>              
         </ul> 
-      <section class="two-half column">
+      </section>
     </section>
     
    
