Added responsive slides

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
           <li><a href="html-css/03_flexbox.html">03 - FLEXBOX</a></li>    
           <li><a href="html-css/04_selectors.html">04 - SELECTORS</a></li>          
           <li><a href="html-css/05_forms_and_tables.html">05 - FORMS AND TABLES</a></li>          
+          <li><a href="html-css/06_responsive.html">06 - RESPONSIVE</a></li>
         </ul> 
       <section class="two-half column">
     </section>
@@ -34,13 +35,11 @@
         <ul>
           <li><a href="bildbehandling/01_intro.html">01 - Intro</a></li>   
           <li><a href="bildbehandling/02_bildhantering.html">02 - Bildhantering</a></li> 
-          <li><a href="bildbehandling/03_svg.html">03 - SVG</a></li>              
+          <li><a href="bildbehandling/03_svg.html">03 - SVG</a></li> 
+          <li><a href="bildbehandling/04_mockups.html">04 - MOCKUPS</a></li>             
         </ul> 
       </section>
     </section>
-    
-   
-    
   </main>
 </body>
 </html>
