--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           <li><a href="html-css/04_selectors.html">04 - SELECTORS</a></li>          
           <li><a href="html-css/05_forms_and_tables.html">05 - FORMS AND TABLES</a></li>          
           <li><a href="html-css/06_responsive.html">06 - RESPONSIVE</a></li>
+          <li><a href="html-css/07_typography_colors.html"> 07 - TYPOGRAFI & FÄRG</a></li>
         </ul> 
       <section class="two-half column">
     </section>
