--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </section>  
     <section class="row">
       <section class="two-half column">
-        <h3>HTML & CSS</h3> 
+        <h3>HTML &amp; CSS</h3> 
         <ul>
           <li><a href="html-css/01_html.html">01 - HTML</a></li>    
           <li><a href="html-css/02_css.html">02 - CSS</a></li>    
@@ -25,9 +25,10 @@
           <li><a href="html-css/04_selectors.html">04 - SELECTORS</a></li>          
           <li><a href="html-css/05_forms_and_tables.html">05 - FORMS AND TABLES</a></li>          
           <li><a href="html-css/06_responsive.html">06 - RESPONSIVE</a></li>
-          <li><a href="html-css/07_typography_colors.html"> 07 - TYPOGRAFI & FÄRG</a></li>
+          <li><a href="html-css/07_typography_colors.html"> 07 - TYPOGRAFI &amp; FÄRG</a></li>
           <li><a href="html-css/08_grid.html"> 08 - CSS GRID</a></li>
-        </ul> 
+          <li><a href="html-css/09_animation.html">09 - ANIMATION </a></li>
+        </ul>
       <section class="two-half column">
     </section>
 
