Minor error in slides

--- a/html-css/12_sass2.html
+++ b/html-css/12_sass2.html
@@ -136,7 +136,7 @@
             <pre><code class="language-scss">$desktop:  "(min-width: 756px)";
 
 @mixin desktop {
-  @media (min-width: #{$desktop}) {
+  @media #{$desktop} {
     @content;
   }
 }
