Added checklist slides

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
           <li><a href="html-css/10_frameworks.html">10 - FRAMEWORKS</a></li>
           <li><a href="html-css/11_sass.html"> 11 - SASS </a></li>
           <li><a href="html-css/12_sass_2.html">12 - SASS 2</a></li>
+          <li><a href="html-css/13_checklist.html">13 - Checklist</a></li>
         </ul>
       <section class="two-half column">
     </section>
