--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
       <header>
         <h1>Slides</h1>
       </header>
-    </section>  
+    </section> 
+    <section class="row">
+      <section class="two-half column">
+        <h3>CMS, PHP & MySQL</h3> 
+        <ul>
+          <li><a href="php/01_intro.html">01 - Intro</a></li>    
+        </ul>
+      <section class="two-half column">
+    </section>
     <section class="row">
       <section class="two-half column">
         <h3>HTML &amp; CSS</h3> 
@@ -43,7 +51,7 @@
           <li><a href="bildbehandling/01_intro.html">01 - Intro</a></li>   
           <li><a href="bildbehandling/02_bildhantering.html">02 - Bildhantering</a></li> 
           <li><a href="bildbehandling/03_svg.html">03 - SVG</a></li> 
-          <li><a href="bildbehandling/04_mockups.html">04 - MOCKUPS</a></li>             
+          <li><a href="bildbehandling/04_mockups.html">04 - MOCKUPS</a></li>
         </ul> 
       </section>
     </section>
