--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
       <section class="two-half column">
         <h3>CMS, PHP & MySQL</h3> 
         <ul>
-          <li><a href="php/01_intro.html">01 - Intro</a></li>    
+          <li><a href="php/01_intro.html">01 - Intro</a></li>  
+          <li><a href="php/02_php_basics.html">02 - PHP Basics</a></li>  
         </ul>
       <section class="two-half column">
     </section>
