--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <ul>
           <li><a href="php/01_intro.html">01 - Intro</a></li>  
           <li><a href="php/02_php_basics.html">02 - PHP Basics</a></li>  
+          <li><a href="php/03_forms.html">03 - Forms</a></li>
         </ul>
       <section class="two-half column">
     </section>
