--- a/php/03_forms.html
+++ b/php/03_forms.html
@@ -103,6 +103,9 @@
 </code></pre>
         <pre><code class="language-php">$data = json_decode(file_get_contents('php://input'), true);</code></pre>
         </section>
+        <section>
+          <p>Övningar finns på <em>GitHub/Studentportalen</em></p>
+        </section>
       </section>
     </div>
   </div>
