Slides about oop

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
           <li><a href="php/01_intro.html">01 - Intro</a></li>  
           <li><a href="php/02_php_basics.html">02 - PHP Basics</a></li>  
           <li><a href="php/03_forms.html">03 - Forms</a></li>
+          <li><a href="php/04_oop.html">04 - OOP</a></li>
         </ul>
       <section class="two-half column">
     </section>
