--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
           <li><a href="php/02_php_basics.html">02 - PHP Basics</a></li>  
           <li><a href="php/03_forms.html">03 - Forms</a></li>
           <li><a href="php/04_oop.html">04 - OOP</a></li>
+          <li><a href="php/05_inheritance.html">05 - 05 Inheritance</a></li>
         </ul>
       <section class="two-half column">
     </section>
