--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           <li><a href="php/04_oop.html">04 - OOP</a></li>
           <li><a href="php/05_inheritance.html">05 - Inheritance</a></li>
           <li><a href="php/06_sql.html">06 - SQL </a></li>
+          <li><a href="php/07_sql2.html">07 - SQL 2</a></li>
         </ul>
       <section class="two-half column">
     </section>
