--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
           <li><a href="php/06_sql.html">06 - SQL </a></li>
           <li><a href="php/07_sql2.html">07 - SQL 2</a></li>
           <li><a href="php/08_auth_session.html">08 - Auth</a></li>
+          <li><a href="php/09_wordpress.html">09 - Wordpress</a></li>
         </ul>
       <section class="two-half column">
     </section>
