--- a/php/09_wordpress.html
+++ b/php/09_wordpress.html
@@ -29,6 +29,10 @@
           <h1><strong>Wordpress</strong></h1>
         </section>
         <section>
+          <p>Wordpress är anledningen till att ni lär er PHP egentligen</p>
+          <p class="fragment fade-down">Frågar du mig så är det för att alla frontendare borde ha en uppfattning om vad som händer bakom kulisserna</p>
+        </section>
+        <section>
           <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/33/Gutenberg.jpg/220px-Gutenberg.jpg">
         </section>
         <section>
@@ -81,7 +85,6 @@
           <p>Alla ska sätta upp ett child theme</p>
           <p>Instruktioner finns på GitHub:</p>
           <p><strong><code>12_wordpress.md</code></strong></p>
-          <p>Sedan fortsätter vi med filstrukturen</p>
         </section>
       </section>
 
@@ -114,118 +117,16 @@
         </section>
       </section>
 
-      <section>
-        <section>
-          <h1><strong>Wordpress</strong></h1>
-          <p>Hooks, loops, functions</p>
-        </section>
-        <section>
-          <p>Att kunna</p>
-          <ul>
-            <li><em>Child Theme</em> - Måste ha en förälder, utökar tema</li>
-            <li><em>Page Template</em> - Mallar för Pages</li>
-            <li><em><code>functions.php</code></em> - Filen för all custom php</li>
-            <li><em><code>style.css</code></em> - Filen för all custom css</li>
-            <li><em><code>frontpage.php</code></em> - Mallen för statisk hemsida</li>
-            <li><em><code>home.php</code></em> - Mallen för blogginlägg</li>
-          </ul>
-        </section>
         <section>
           <h4>WordPress Codex - Bibeln</h4>
           <h4><a href="https://codex.wordpress.org/">https://codex.wordpress.org/</a></h4>
         </section>
-      </section>
+
       <section>
         <section>
-          <h1><em>Custom Queries</em></h1>
+          <p>Andra inlämningsuppgiften ligger uppe</p>
+          <p>Börja idag på eftermiddagen att göra grundstrukturen</p>
         </section>
-        <section>
-          <pre><code class="language-php">if ( have_posts() ) :
-  while ( have_posts() ) : the_post();
-    get_template_part( 'template-parts/content', get_post_format() );
-  endwhile;</code></pre>
-          <p><a href="https://codex.wordpress.org/The_Loop">https://codex.wordpress.org/The_Loop</a></p>
-        </section>
-        <section>
-          <p>Ungefärligt översatt till PHP</p>
-          <pre><code class="language-php">foreach($posts as $post){
-  require 'post-content.php';
-}</code></pre>
-        </section>
-        <section>
-          <p>Funktioner som returnerar innehållet</p>
-          <ul>
-            <li><em>the_title</em> - titeln</li>
-            <li><em>the_content</em> - själva inlägget</li>
-            <li><em>the_thumbnail</em> - "Featured Image"</li>
-            <li><em>the_category</em> - kategorin/er</li>
-            <li><em>the_post_meta</em> - metadata, författare etc.</li>
-          </ul>
-        </section>
-        <section>
-          <h3><em>WP_Query</em></h3>
-          <p><a href="https://codex.wordpress.org/Class_Reference/WP_Query">https://codex.wordpress.org/Class_Reference/WP_Query</a></p>
-        </section>
-        <section>
-          <pre><code class="language-php">$the_query = new WP_Query( $arguments );
-
-if ( $the_query->have_posts() ) :
-  while ( $the_query->have_posts() ) :
-    $the_query->the_post();
-  endwhile;</code></pre>
-          <p class="fragment fade-down">Vi måste skriva variabelnamnet före allt</p>
-        </section>
-        <section>
-          <pre><code class="language-php">$query = new WP_Query( array( 'author' => 5 ) );
-</code></pre>
-        <pre><code class="language-php">$query = new WP_Query( array( 'category_name' => 'cats' ) );
-</code></pre>
-        <pre><code class="language-php">$query = new WP_Query( array( 'tag' => 'sports' ) );
-</code></pre>
-        </section>
-        <section>
-          <pre><code class="language-php">$query = new WP_Query( 
-  array( 
-    'tag'             => 'sports',
-    'posts_per_page'  => '10'
-  )
-);
-</code></pre>
-        </section>
-        <section>
-          <p>Bra lista på hjälpsamma funktioner</p>
-          <p><a href="https://github.com/taniarascia/wp-functions">https://github.com/taniarascia/wp-functions</a></p>
-        </section>
-        <section>
-          <h4><em>Hooks</em></h4>
-          <p><a href="https://codex.wordpress.org/Plugin_API/Action_Reference">https://codex.wordpress.org/Plugin_API/Action_Reference</a></p>
-        </section>
-        <section>
-          <p>Vi har två sätt att modifiera innehåll via hooks</p>
-          <ul>
-            <li><em>actions</em> - kör handlingar vid vissa tillfällen</li>
-            <li><em>filters</em> - filtrerar innehåll vid vissa tillfällen</li>
-          </ul>
-          <pre><code class="language-php">
-add_action('init', 'my_custom_function');
-add_filter('the_title', 'my_title_function');</code></pre>
-        </section>
-        <section>
-          <pre><code class="language-php">function profanity_filter($text) {
-  $words = array("illuminati", "big brother", "deep state");
-  /* str_replace checks for words in the array and removes them from
-   * the content in the post, returning a bleeped version */
-  return str_replace($words, "BLEEP", $text);
-}
-
-add_filter('the_content', 'profanity_filter');</code></pre>
-        </section>
-      </section>
-      <section>
-        <p>Att tänka på: bilder</p>
-        <p>Använd Wordpress inbyggda bildhanteringssystem</p>
-        <p>Kör bilderna genom <a href="https://imageoptim.com/mac">ImageOptim</a>  / <a href="https://nikkhokkho.sourceforge.io/static.php?page=FileOptimizer">FileOptimizer</a>  </p>
-        <p>Tänk på att ändra <strong>thumbnail size</strong></p>
       </section>
 
     </div>
