Added API SLIDES

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
           <li><a href="php/08_auth_session.html">08 - Auth</a></li>
           <li><a href="php/09_wordpress.html">09 - Wordpress</a></li>
           <li><a href="php/10_wordpress2.html">10 - Wordpress 2</a></li>
+          <li><a href="php/11_api.html">11 - API</a></li>
         </ul>
       <section class="two-half column">
     </section>
